changed name of files and added some changes to color and text

--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: 	#002D72;/*#0A2240;*/
     color: #fff;
     padding: 10px 0;
-    text-align: center;
+    text-align: left;
 }
 
 nav ul {
@@ -33,7 +33,7 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #002D72;
     color: #fff;
     text-align: center;
     padding: 10px 0;
